# ci_practice

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yml
app/: discount.py
tests/: test_discount.py
